2006-02-24  John Peacock <jpeacock@cpan.org>

	Further improvements in making sure that the svn_binary is found.

2006-02-17  John Peacock <jpeacock@cpan.org>

	Release 0.04 to CPAN.

	* Build.PL
	    Add explicit dependency on SVN::Notify. Duh.

	* README
	  lib/SVN/Notify/Mirror.pm
	    Improve documentation of optional features.

2006-02-17  John Peacock <jpeacock@cpan.org>

	Don't hardcode path to svn executable.

2006-02-16  John Peacock <jpeacock@cpan.org>

	Older Subversion clients choke if you give them the repos path when they
	weren't expecting it (go figure).

2006-01-03  John Peacock <jpeacock@cpan.org>

	Release 0.03 to CPAN.

	* README
	    Clarify a few points.

	* lib/SVN/Notify/Mirror.pm
	    Bump the $VERSION.

2005-12-29  John Peacock <jpeacock@cpan.org>

	One last file to add.

	* lib/SVN/Notify/Mirror/Rsync.pm
	    Forgot to add this back to the repository in its current form.

2005-12-29  John Peacock <jpeacock@cpan.org>

	Nearly forgot to add files to the MANIFEST.

	* MANIFEST
	    Add Rsync.pm and tests for same.

2005-12-29  John Peacock <jpeacock@cpan.org>

	* Build.PL
	    Add support structure for Rsync class.

	* README
	    Simplify and discuss features that have changed.

	* lib/SVN/Notify/Mirror.pm
	    Update $VERSION.  Add POD describing tag-regex option.

	* t/coretests.pm
	    Replicate wc_map structure for Rsync tests.

	* t/004_rsynctest.t.PL
	    New test for Rsync transport method.

2005-12-28  John Peacock <jpeacock@cpan.org>

	Ready to release alpha code to CPAN.

	* MANIFEST
	    Need to add new file or it doesn't get included in tar.

	* README
	    Mention Mirror::SSH in example.

	* lib/SVN/Notify/Mirror/Rsync.pm
	    Take this out until design questions are resolved.

	* lib/SVN/Notify/Mirror.pm
	    Bump $VERSION and standardize whitespace.

	* t/coretests.pm
	    Tweak $changes slightly to test empty updates, too.

	* t/survey_repos
	    First pass at improving code to autogenerate test cases.
